sections overlap is fixed

--- a/css/style.less
+++ b/css/style.less
@@ -52,7 +52,7 @@
 	font-size: 2rem;
 	font-weight: lighter;
 	li {
-	padding: 1rem 3rem 1rem 3rem;
+	padding: 1rem;
 	letter-spacing: .5rem;
 
 	}
@@ -115,6 +115,7 @@ header {
  	background-color: #D9658D;
  	.page-display();
  	color: white;
+
  	h1 {
  	font-family: @font-textme;	
  	}
@@ -145,6 +146,7 @@ header {
 #about-skills {
  	background-color: black;
  	.page-display();
+ 	height: 100vh;
  	 h1 {
  	color: hotpink;
  	font-family: @font-textme;
@@ -221,11 +223,9 @@ header {
 	.custom-size {
 		font-size: 1.5rem !important;
 	}
-	 #about-me, #about-skills {
-	 	height: 100vh;
-	 }
-	 #projects {
+	 #about-me, #about-skills, #projects {
 	 	height: auto;
+	 	padding: 5rem 0 5rem 0;
 	 }
 	 .img-small {
 	 	width: 20rem;
